Add database to terraform
Also moves sensitive and environment-specific configuration into varfile.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@
 
 # Terraform
 deploy/.terraform/
-deploy/backend-config
 deploy/secrets
-deploy/development
+deploy/backend-configs/*
+deploy/varfiles/*
+!deploy/backend-configs/backend-config.example
+!deploy/varfiles/varfile.example
