Use database url for production envs, to match config on AWS

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,4 @@ test:
 #
 production:
   <<: *default
-  database: rails-aws-starter_production
-  username: rails-aws-starter
-  password: <%= ENV['RAILS-AWS-STARTER_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
