Add bastion / jump box
Adds a bastion in our public subnet with access limited to relevant IP addresses, and grants SSH access to EC2 instances in the private subnet.

Does not yet include adding individual keys for jumping within the VPC (from bastion to app instance).

--- a/deploy/varfiles/varfile.example
+++ b/deploy/varfiles/varfile.example
@@ -1,8 +1,7 @@
 # IAM User with admin permissions
 access_key =
 secret_key =
-
 rds_password =
-
-# To generate this run rake secrets
 rails_secret_key_base =
+key_name =
+public_key =
